--- a/web/style.css
+++ b/web/style.css
@@ -1,12 +1,24 @@
 body {
   font-family: 'Open Sans', sans-serif;
+  background: #eee;
 }
 
 .chat, .action {
-  padding: 15px;
-  border: 1px solid grey;
-  border-radius: 10px;
-  margin: 7px 0;
+  margin: .5em auto;
+  background: white;
+  max-width: 34em;
+}
+
+.chat:before,
+.action:before,
+.chat:after,
+.action:after {
+    content:"";
+    display:table;
+}
+.chat:after,
+.action:after {
+    clear:both;
 }
 
 time {
@@ -24,6 +36,10 @@ time {
   font-weight: 600;
 }
 
+.action {
+  color: #555;
+}
+
 .em {
   width: 20px;
   height: 20px;
@@ -31,4 +47,26 @@ time {
   display: inline-block;
   *display: inline;
   zoom: 1;
+}
+
+.meta {
+  width: 5em;
+  float: left;
+  color: #888;
+  padding: 1em;
+  height: 100%;
+}
+
+p {
+  padding: 1em;
+  width: 25em;
+  max-width: 100%;
+  float: left;
+  margin: 0;
+}
+
+h1 {
+  text-align: center;
+  margin: 1em 0;
+  font-weight: 300;
 }
